Implemented Authentication and Jwt server inside UserManagementServiceApplication