@@ -1,7 +1,9 @@
 package com.ynm.usermanagementservice.config;
 
-import com.ynm.usermanagementservice.service.UserDetailsServiceImpl;
-import lombok.RequiredArgsConstructor;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
+
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationManager;
@@ -21,83 +23,78 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
+import com.ynm.usermanagementservice.service.UserDetailsServiceImpl;
+
+import lombok.RequiredArgsConstructor;
 
 @Configuration
 @EnableWebSecurity
 @RequiredArgsConstructor
 public class SecurityConfiguration {
-        private final JwtAuthenticationFilter jwtAuthenticationFilter;
-        private final UserDetailsServiceImpl userService;
+    private final JwtAuthenticationFilter jwtAuthenticationFilter;
+    private final UserDetailsServiceImpl userService;
 
-        private final AuthEntryPointJwt unauthorizedHandler;
+    private final AuthEntryPointJwt unauthorizedHandler;
 
-        @Bean
-        public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-                http.cors(Customizer.withDefaults())
-                                .authorizeHttpRequests(request -> request
-                                                .requestMatchers(
-                                                                "/api/auth/**",
-                                                                "/swagger-ui-testing.html",
-                                                                "/swagger-ui/**",
-                                                                "/v3/api-docs/**",
-                                                                "/redoc.html",
-                                                                "/ws/**",
-                                                                "/api/chat/**",
-                                                                "/api/aws/download/**",
-                                                                "/api/aws/upload",
-                                                                "/api/utils/getAppVersionByOS/**",
-                                                                "/api/notifications/sendSingleNotification",
-                                                                "/actuator/**",
-                                                                "/api/deepLink/**",
-                                                                "/api/user/ping/**")
-                                                .permitAll()
-                                                .anyRequest().authenticated())
-                                .sessionManagement(manager -> manager
-                                                .sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                                .authenticationProvider(authenticationProvider()).addFilterBefore(
-                                                jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
-                                .csrf(AbstractHttpConfigurer::disable)
-                                .exceptionHandling(exception -> exception
-                                                .authenticationEntryPoint(unauthorizedHandler));
+    @Bean
+    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+        http.cors(Customizer.withDefaults())
+                .authorizeHttpRequests(request -> request
+                        .requestMatchers(
+                                "/error",
+                                "/api/auth/**",
+                                "/api/auth",
+                                "/swagger-ui-testing.html",
+                                "/swagger-ui/**",
+                                "/v3/api-docs/**",
+                                "/v3/api-docs.yaml"
+                        )
+                        .permitAll()
+                        .anyRequest().authenticated())
+                .sessionManagement(manager -> manager
+                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .authenticationProvider(authenticationProvider()).addFilterBefore(
+                        jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
+                .csrf(AbstractHttpConfigurer::disable)
+                .exceptionHandling(exception -> exception
+                        .authenticationEntryPoint(unauthorizedHandler));
 
-                return http.build();
-        }
+        return http.build();
+    }
 
-        @Bean
-        public AuthenticationProvider authenticationProvider() {
-                DaoAuthenticationProvider authenticationProvider = new DaoAuthenticationProvider();
-                authenticationProvider.setUserDetailsService(userService);
-                authenticationProvider.setPasswordEncoder(passwordEncoder());
-                return authenticationProvider;
-        }
+    @Bean
+    public AuthenticationProvider authenticationProvider() {
+        DaoAuthenticationProvider authenticationProvider = new DaoAuthenticationProvider();
+        authenticationProvider.setUserDetailsService(userService);
+        authenticationProvider.setPasswordEncoder(passwordEncoder());
+        return authenticationProvider;
+    }
 
-        @Bean
-        public PasswordEncoder passwordEncoder() {
-                return new BCryptPasswordEncoder();
-        }
+    @Bean
+    public PasswordEncoder passwordEncoder() {
+        return new BCryptPasswordEncoder();
+    }
 
-        @Bean
-        public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
-                return config.getAuthenticationManager();
-        }
+    @Bean
+    public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
+        return config.getAuthenticationManager();
+    }
 
-        @Bean
-        public CorsConfigurationSource corsConfigurationSource() {
-                CorsConfiguration configuration = new CorsConfiguration();
-                configuration.setAllowedOriginPatterns(List.of("*")); // Add your allowed origins here
-                configuration.setAllowedMethods(
-                                Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "HEAD", "PATCH"));
-                configuration
-                                .setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Cache-Control",
-                                                "X-Auth-Token"));
-                configuration.setAllowCredentials(true);
-                configuration.setExposedHeaders(Collections.singletonList("Authorization"));
-                UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-                source.registerCorsConfiguration("/**", configuration);
-                return source;
-        }
+    @Bean
+    public CorsConfigurationSource corsConfigurationSource() {
+        CorsConfiguration configuration = new CorsConfiguration();
+        configuration.setAllowedOriginPatterns(List.of("*")); // Add your allowed origins here
+        configuration.setAllowedMethods(
+                Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "HEAD", "PATCH"));
+        configuration
+                .setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Cache-Control",
+                        "X-Auth-Token"));
+        configuration.setAllowCredentials(true);
+        configuration.setExposedHeaders(Collections.singletonList("Authorization"));
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", configuration);
+        return source;
+    }
 
 }
+
